serverless for DLT

--- a/resources/demo_03_pipeline.yml
+++ b/resources/demo_03_pipeline.yml
@@ -3,7 +3,8 @@ resources:
     demo_03_pipeline:
       name: ${bundle.target}_demo03_pipeline_${workspace.current_user.userName}
       catalog: ${var.target_catalog}
-      schema: "default"
+      target: "default"
+      serverless: true
       libraries:
         - notebook:
             path: ../src/dlt_pipelines.ipynb
@@ -11,4 +12,3 @@ resources:
         display_target: ${bundle.target}
         catalog_name: ${var.target_catalog}
         raw_data_path: ${var.raw_data_path}
-        
